--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Swagger UI</title>
-    <link rel="stylesheet" type="text/css" href="https://github.com/mariusbanea/prime-numbers-api-swagger-ui/blob/master/app/swagger-ui.css">
-    <!-- <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16" /> -->
+    <link rel="stylesheet" type="text/css" href="./swagger-ui.css">
+    <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16" />
     <style>
         html {
             box-sizing: border-box;
@@ -32,9 +32,9 @@
     <p>hey</p>
     <div id="swagger-ui"></div>
 
-    <!-- <script src="swagger-ui-bundle.js">
+    <script src="./swagger-ui-bundle.js">
     </script>
-    <script src="swagger-ui-standalone-preset.js">
+    <script src="./swagger-ui-standalone-preset.js">
     </script>
     <script>
         window.onload = function() {
@@ -56,7 +56,7 @@
 
             window.ui = ui
         }
-    </script> -->
+    </script>
 </body>
 
 </html>
