--- a/dev-helpers/index.html
+++ b/dev-helpers/index.html
@@ -42,7 +42,7 @@
             window["SwaggerUIStandalonePreset"] = window["swagger-ui-standalone-preset"]
                 // Build a system
             const ui = SwaggerUIBundle({
-                url: "https://prime-numbers-api-swagger-ui.herokuapp.com/swagger.json",
+                url: "./swagger.json",
                 dom_id: '#swagger-ui',
                 presets: [
                     SwaggerUIBundle.presets.apis,
